completed prompt 2 of getting message list minus getting nested category boxes

--- a/hw21720/mailboxApp/index.html
+++ b/hw21720/mailboxApp/index.html
@@ -28,7 +28,7 @@
                     <tr>
                         <th scope="row">List of emails</th>
                         <td id="prompt2"></td>
-                        <td>Call Object.keys on a random object in the inbox array, generate html for each property and value in object</td>
+                        <td>Use for in loop on gMail.user1.mailboxes object, use forEach on each mailbox array and add the mailbox name, then message info</td>
                     </tr>
                 </tbody>
             </table>
