tweaked display errors, centered messages, started making functions to get nested arrays

--- a/hw21720/mailboxApp/index.html
+++ b/hw21720/mailboxApp/index.html
@@ -28,7 +28,7 @@
                     <tr>
                         <th scope="row">List of emails</th>
                         <td id="prompt2"></td>
-                        <td>Use for in loop on gMail.user1.mailboxes object, use forEach on each mailbox array and add the mailbox name, then message info</td>
+                        <td>Use for in loop on gMail.user1.mailboxes object, use forEach on each mailbox array and append the mailbox name, then message info to as inner HTML</td>
                     </tr>
                 </tbody>
             </table>
