--- a/hw21720/mailboxApp/index.html
+++ b/hw21720/mailboxApp/index.html
@@ -30,6 +30,11 @@
                         <td id="prompt2"></td>
                         <td>Use for in loop on gMail.user1.mailboxes object, use forEach on each mailbox array and append the mailbox name, then message info to as inner HTML</td>
                     </tr>
+                    <tr>
+                        <th scope="row">Second email in list</th>
+                        <td id="prompt3"></td>
+                        <td>Declared an empty array to push messages into, initiated an outer counter, for in loop to get through mailboxes object, the loop over each array, and push each message into outer array.  Outside of for in loop, append second item in outer array as innerHTML</td>
+                    </tr>
                 </tbody>
             </table>
         </main>
