completed all five prompts, minus deep nested folder traversing, code needs cleaning up

--- a/hw21720/mailboxApp/index.html
+++ b/hw21720/mailboxApp/index.html
@@ -35,6 +35,16 @@
                         <td id="prompt3"></td>
                         <td>Declared an empty array to push messages into, initiated an outer counter, for in loop to get through mailboxes object, the loop over each array, and push each message into outer array.  Outside of for in loop, append second item in outer array as innerHTML</td>
                     </tr>
+                    <tr>
+                        <th scope="row">Mark email sent</th>
+                        <td id="prompt4"></td>
+                        <td>Declare a variable of message sent set to false, push flase to the drafts categories array, if sent is a category, then the variable is flipped to true.  Following code moves message from draft to sent</td>
+                    </tr>
+                    <tr>
+                        <th scope="row">Add a draft email to the drafts folder</th>
+                        <td id="prompt5"></td>
+                        <td>create a function to generate a draft object and push it to the drafts array in gmail</td>
+                    </tr>
                 </tbody>
             </table>
         </main>
