adjusted code to suit multiplayer mode, player hand not being properly assigned assignToss func

--- a/rockPaperHW31220/index.html
+++ b/rockPaperHW31220/index.html
@@ -21,12 +21,24 @@
             <button id="play-button">Play Round</button>
         </div>
         <div id="score-row">
-            <div id="player1-score" class="player-score-container">
-                <h3 class="player-score-name">Player1</h3>
+            <div id="playerA-score" class="player-score-container">
+                <select name="playerA" id="playerAMenu" class="player-score-name">
+                    <option value="player1">Player 1</option>
+                    <option value="player2">Player 2</option>
+                    <option value="player3">Player 3</option>
+                    <option value="player4">Player 4</option>
+                </select>
+                <!-- <h3 class="player-score-name">Player1</h3> -->
                 <h3 class="player-score-number"></h3>
             </div>
-            <div id="player2-score" class="player-score-container">
-                 <h3 class="player-score-name">Player2</h3>
+            <div id="playerB-score" class="player-score-container">
+                <select name="playerB" id="playerBMenu" class="player-score-name">
+                    <option value="player1">Player 1</option>
+                    <option value="player2">Player 2</option>
+                    <option value="player3">Player 3</option>
+                    <option value="player4">Player 4</option>
+                </select>
+                 <!-- <h3 class="player-score-name">Player2</h3> -->
                  <h3 class="player-score-number"></h3>
             </div>
         </div>
