started setting up rock paper game for functionality on page

--- a/rockPaperHW31220/index.html
+++ b/rockPaperHW31220/index.html
@@ -13,6 +13,24 @@
             <h1>ROCK PAPER SCCISSORS, SHOOT!</h1>
         </div>
         <div id="bottom-half">
+        <div id="scoreboardcontainer">
+            <div class="scoreboardindvscores">
+                <h4>Player 1:</h4>
+                <h4 id="player1BoardScore"></h4>
+            </div>
+            <div class="scoreboardindvscores">
+                <h4>Player 2:</h4>
+                <h4 id="player2BoardScore"></h4>
+            </div>
+            <div class="scoreboardindvscores">
+                <h4 id="player3BoardScore">Player 3:</h4>
+                <h4></h4>
+            </div>
+            <div class="scoreboardindvscores">
+                <h4>Player 4:</h4>
+                <h4 id="player4BoardScore"></h4>
+            </div>
+        </div>
         <div id="round-results">
             <p>Hit the button to play the game!</p>
             <p></p>
