completed required functionality of todolist app

--- a/toDoApp/index.html
+++ b/toDoApp/index.html
@@ -14,20 +14,19 @@
     </header>
     <main>
         <section id="task-adder">
-            <div id ="cation_input">
-                <h3>Add Task</h3>
+            <div id ="caption_input">
+                <h3>Add Task:</h3>
                 <input type="text" id="task-to-add">
             </div>
            <button id="task-add-button">Add to List</button>
         </section>
-        <section>   
-
+        <section id="list-container">   
             <h2>Tasks</h2>
             <ul id="task-list">
-                <li><button class="minus-button">-</button> Learn This keyword</li>
-                <li><button class="minus-button">-</button>Practice Call, Apply, bind</li>
-                <li><button class="minus-button">-</button>work on Function prototypes</li>
-                <li><button class="minus-button">-</button>Learn reduce recursively</li>
+                <li><button class="minus-button">-</button> <span>Learn This keyword</span> </li>
+                <li><button class="minus-button">-</button> <span>Practice Call, Apply, bind</span> </li>
+                <li><button class="minus-button">-</button> <span>work on Function prototypes</span> </li>
+                <li><button class="minus-button">-</button> <span>Learn reduce recursively</span> </li>
             </ul>
         </section>
     </main>
