completed basic functionality of project including multiplayer

--- a/rockPaperHW31220/index.html
+++ b/rockPaperHW31220/index.html
@@ -16,19 +16,19 @@
         <div id="scoreboardcontainer">
             <div class="scoreboardindvscores">
                 <h4>Player 1:</h4>
-                <h4 id="player1BoardScore"></h4>
+                <h4 id="player1BoardScore">0</h4>
             </div>
             <div class="scoreboardindvscores">
                 <h4>Player 2:</h4>
-                <h4 id="player2BoardScore"></h4>
+                <h4 id="player2BoardScore">0</h4>
             </div>
             <div class="scoreboardindvscores">
-                <h4 id="player3BoardScore">Player 3:</h4>
-                <h4></h4>
+                <h4>Player 3:</h4>
+                <h4 id="player3BoardScore">0</h4>
             </div>
             <div class="scoreboardindvscores">
                 <h4>Player 4:</h4>
-                <h4 id="player4BoardScore"></h4>
+                <h4 id="player4BoardScore">0</h4>
             </div>
         </div>
         <div id="round-results">
@@ -47,7 +47,7 @@
                     <option value="player4">Player 4</option>
                 </select>
                 <!-- <h3 class="player-score-name">Player1</h3> -->
-                <h3 class="player-score-number"></h3>
+                <h3 class="player-score-number">0</h3>
             </div>
             <div id="playerB-score" class="player-score-container">
                 <select name="playerB" id="playerBMenu" class="player-score-name">
@@ -57,7 +57,7 @@
                     <option value="player4">Player 4</option>
                 </select>
                  <!-- <h3 class="player-score-name">Player2</h3> -->
-                 <h3 class="player-score-number"></h3>
+                 <h3 class="player-score-number">0</h3>
             </div>
         </div>
         <div id="img-container">
