completed requirements of form validation assignments

--- a/jQueryEx/index.html
+++ b/jQueryEx/index.html
@@ -15,7 +15,7 @@
       <div class="form-container">
         <form id="form" name="form">
           <h3>Contact Us Here:</h3>
-          <p id="message"></p>
+          <p id="message-p"></p>
       ​
           <label>Name:</label>
           <input id="name" placeholder="Name" type="text"><br>
@@ -24,9 +24,39 @@
           <label>Number:</label>
           <input id="phone" placeholder="10 digit phone number." type="tel"><br>
           <label>Message:</label>
-          <textarea id="message" placeholder="Your thoughts here :)"></textarea><br>
+          <textarea id="message-box" placeholder="Your thoughts here :)"></textarea><br>
           <input id="submit" type="button" value="Send It!">
         </form>
       </div>
 </body>
 </html>
+
+<!-- ## Exercise - Form Validation
+​
+- Create a Form and add validations using jQuery
+- Utilize the html and css provided below
+​
+- Create a function that will fire when the **submit** `<button>` is *clicked*
+- Make sure the function loaded after the `DOM`
+- Inside the function:
+ - create variables for each of the form inputs
+  - use jQuery to accomplish this task
+  - *(think about querySelector)*
+ - create an `array` named *required*
+  - store the variables you've **name**, **email**, and **phone number**
+ - Utilize a `for` loop to iterate of the entire **required** `array`
+ - Inside the `for` loop:
+  - use an `if` statement to check the **value** of each array item
+  - **if** the array item is equal to an empty string (`""`)
+   - populate the `message` `<p>` with the following text: <br> *"Please Fill Out Required Fields"*
+   - add the **warning** `class` to this message
+  - Attach the **warning** `class` to the array item's `<label>` <br> *note: You want the label to turn red, if the field is empty*
+  - once the field has something *other* than a blank string. make sure the **warning** `class` is removed
+ - close out the `for` loop
+ - utilize another `if` statement
+  - verify that no `<label>`'s have the **warning** `class`
+  - if true
+   - remove the `form` from the `DOM`
+   - manipulate the `<h2>` to say: *"Thanks for your feedback!"*
+- close out your function
+- test it out! -->
