all prompts complete up until last one

--- a/ajaxex/index.html
+++ b/ajaxex/index.html
@@ -19,7 +19,27 @@
             <div class="buttonContainer">
                 <button id="button1">Get all posts</button>
             </div>
-
+            <div class="buttonContainer">
+                <button id="button2">Get post ID=10</button>
+            </div>
+            <div class="buttonContainer">
+                <button id="button3">comments of postId=12</button>
+            </div>
+            <div class="buttonContainer">
+                <button id="button4">posts of userId=2</button>
+            </div>
+            <div class="buttonContainer">
+                <button id="button5">Create new post, log Id</button>
+            </div>
+            <div class="buttonContainer">
+                <button id="button6">replace post Id=12</button>
+            </div>
+            <div class="buttonContainer">
+                <button id="button7">Update post id=12</button>
+            </div>
+            <div class="buttonContainer">
+                <button id="button8">Delete post id=12</button>
+            </div>
         </section>
         <section id="contentDisplay">
 
