completed all requirements of ajaxex1, return to all posts button of last prompt does not return to page with clickable posts, too much duplicate code in script file

--- a/ajaxex/index.html
+++ b/ajaxex/index.html
@@ -40,6 +40,9 @@
             <div class="buttonContainer">
                 <button id="button8">Delete post id=12</button>
             </div>
+            <div class="buttonContainer">
+                <button id="button9">List all clickable posts</button>
+            </div>
         </section>
         <section id="contentDisplay">
 
