--- a/ajaxex/ex2/index.html
+++ b/ajaxex/ex2/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Promises</title>
     <link rel="stylesheet" href="style.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+    <script src="./script.js"></script>
 </head>
 <body>
     <header>
@@ -28,6 +30,6 @@
            
         </section>
     </main>
-    <script src="./script.js"></script>
+    
 </body>
 </html>
